[gd_scene load_steps=12 format=3 uid="uid://c2afyl0br5mem"]

[ext_resource type="PackedScene" uid="uid://1n8xqlun6odh" path="res://scenes/enemies/enemy.tscn" id="1_d4nws"]
[ext_resource type="Texture2D" uid="uid://dvj6mrgxlntau" path="res://assets/0x72_DungeonTilesetII_v1.5/0x72_DungeonTilesetII_v1.5.png" id="2_b4x5n"]
[ext_resource type="Script" path="res://scenes/enemies/red-demon.gd" id="2_pe1if"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k3km1"]
radius = 5.09902

[sub_resource type="Animation" id="Animation_6pd86"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jyw30"]
resource_name = "attack"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_ugypu"]
resource_name = "idle"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2fki7"]
_data = {
"RESET": SubResource("Animation_6pd86"),
"attack": SubResource("Animation_jyw30"),
"idle": SubResource("Animation_ugypu")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_thyjy"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c2658"]
radius = 19.4165

[sub_resource type="CircleShape2D" id="CircleShape2D_bu0su"]
radius = 32.311

[node name="red-demon" instance=ExtResource("1_d4nws")]
script = ExtResource("2_pe1if")
damage = 30
speed = 50
leap_factor = 10000

[node name="Icon" parent="." index="0"]
texture = ExtResource("2_b4x5n")
hframes = 8
region_enabled = true
region_rect = Rect2(368, 64, 128, 16)

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_k3km1")

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_2fki7")
}

[node name="Hitbox" parent="." index="3"]
position = Vector2(1, 2)
collision_layer = 2
can_dmg = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("CircleShape2D_thyjy")

[node name="PatrolZone" type="Area2D" parent="." index="4"]
position = Vector2(1, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PatrolZone" index="0"]
shape = SubResource("CircleShape2D_c2658")

[node name="ChasingZone" type="Area2D" parent="." index="5"]
position = Vector2(1, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChasingZone" index="0"]
shape = SubResource("CircleShape2D_bu0su")

[node name="patrol_timer" type="Timer" parent="." index="6"]
wait_time = 5.0
autostart = true

[node name="chase_wearoff" type="Timer" parent="." index="7"]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="ChasingZone" to="." method="_on_chasing_zone_body_entered"]
[connection signal="body_exited" from="ChasingZone" to="." method="_on_chasing_zone_body_exited"]
[connection signal="timeout" from="patrol_timer" to="." method="_on_patrol_timer_timeout"]
[connection signal="timeout" from="chase_wearoff" to="." method="_on_chase_wearoff_timeout"]
